fixed double scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 background: rgb(0,0,70);
 background: radial-gradient(circle, rgba(0,0,70,1) 64%, rgba(28,181,224,1) 90%, rgba(28,181,224,1) 100%);
 }
